Refactor contact component to remove specific name references and update global scrollbar styles

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,7 +13,7 @@
 ::-webkit-scrollbar {
   /* height: 10px; */
   /* border-radius: 1px solid #d5d5d5; */
-  @apply h-2 w-[12px] rounded-sm border-gray-100/20;
+  @apply h-2 w-[6px] rounded-sm border-gray-100/20;
 }
 
 /* Track */
@@ -23,12 +23,12 @@
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  @apply bg-purple-400/50 rounded-[4px];
+  @apply bg-white rounded-[1px];
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  @apply bg-purple-400;
+  @apply bg-white rounded-[1px];
 }
 
 @layer base {
